build: upgrade next version to 13.5.3

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "chalk": "^4.1.2",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
-    "next": "13.4.19",
+    "next": "^13.5.3",
     "next-connect": "^1.0.0",
     "pg": "^8.11.3",
     "postcss": "8.4.29",
