--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,8 @@
   },
   "rules": {
     "import/prefer-default-export": "off",
-    "@typescript-eslint/return-await": "off"
+    "@typescript-eslint/return-await": "off",
+    "@typescript-eslint/naming-convention": "off",
+    "no-underscore-dangle": "off"
   }
 }
