--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.15",
+    "bcrypt": "^5.1.1",
     "chalk": "^4.1.2",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
@@ -37,6 +38,7 @@
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
     "@commitlint/prompt-cli": "^17.7.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "^20.6.0",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
