--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["commitlint", "Rollbar", "tailwindcss"]
+  "cSpell.words": ["commitlint", "Rollbar", "tailwindcss", "toastify"]
 }
