--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "chalk": "^4.1.2",
     "dotenv": "^16.3.1",
@@ -31,6 +32,8 @@
     "postgres": "^3.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3",
     "zod": "^3.22.2"
   },
