--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,10 @@
     "import/prefer-default-export": "off",
     "@typescript-eslint/return-await": "off",
     "@typescript-eslint/naming-convention": "off",
-    "no-underscore-dangle": "off"
+    "no-underscore-dangle": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      { "argsIgnorePattern": "^_" }
+    ]
   }
 }
