--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "chalk": "^4.1.2",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
-    "jsonwebtoken": "^9.0.2",
+    "jose": "^4.14.6",
     "next": "^13.5.3",
     "next-connect": "^1.0.0",
     "pg": "^8.11.3",
@@ -43,7 +43,6 @@
     "@commitlint/config-conventional": "^17.7.0",
     "@commitlint/prompt-cli": "^17.7.1",
     "@types/bcrypt": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.6.0",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
