--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "next": "^13.5.3",
     "next-connect": "^1.0.0",
     "pg": "^8.11.3",
-    "postcss": "8.4.29",
+    "postcss": "^8.4.31",
     "postgres": "^3.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
