feat: apply a basic root layout

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-  "cSpell.words": ["commitlint", "Rollbar", "tailwindcss", "toastify"]
+  "cSpell.words": [
+    "clsx",
+    "commitlint",
+    "nunito",
+    "Rollbar",
+    "tailwindcss",
+    "toastify"
+  ],
+  "tailwindCSS.experimental.classRegex": [
+    ["clsx\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"]
+  ]
 }
