--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "chalk": "^4.1.2",
+    "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
     "jose": "^4.14.6",
