feat: add react query and implement for login

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
     "Pinterest",
     "Rollbar",
     "tailwindcss",
+    "tanstack",
     "toastify"
   ],
   "tailwindCSS.experimental.classRegex": [
