--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,8 @@
     "airbnb-typescript",
     "airbnb/hooks",
     "next/core-web-vitals",
-    "prettier"
+    "prettier",
+    "plugin:@tanstack/eslint-plugin-query/recommended"
   ],
   "parserOptions": {
     "project": ["./tsconfig.json", "./src/app/api/_db/scripts/tsconfig.json"]
