--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "commitlint": "commitlint --edit"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
     "autoprefixer": "10.4.15",
@@ -36,6 +37,7 @@
     "postgres": "^3.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3",
