--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,9 @@
     "@typescript-eslint/no-unused-vars": [
       "error",
       { "argsIgnorePattern": "^_" }
-    ]
+    ],
+    "react/jsx-curly-brace-presence": "off",
+    "react/jsx-props-no-spreading": "off",
+    "react/button-has-type": "off"
   }
 }
