--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-hook-form": "^7.47.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
+    "sharp": "^0.32.6",
     "tailwindcss": "3.3.3",
     "zod": "^3.22.4"
   },
