--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,10 @@
     "plugin:@tanstack/eslint-plugin-query/recommended"
   ],
   "parserOptions": {
-    "project": ["./tsconfig.json", "./src/app/api/_db/scripts/tsconfig.json"]
+    "project": [
+      "./tsconfig.json",
+      "./src/app/(server)/_db/scripts/tsconfig.json"
+    ]
   },
   "rules": {
     "import/prefer-default-export": "off",
