--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "src/app/api/_db/scripts", ".next"]
+  "exclude": ["node_modules", "src/app/(server)/_db/scripts", ".next"]
 }
