--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
+    "ai": "^2.2.17",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
@@ -32,6 +33,7 @@
     "jose": "^4.14.6",
     "next": "^13.5.3",
     "next-connect": "^1.0.0",
+    "openai-edge": "^1.2.2",
     "pg": "^8.11.3",
     "postcss": "^8.4.31",
     "postgres": "^3.3.5",
