--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jose": "^4.14.6",
     "next": "^13.5.3",
     "next-connect": "^1.0.0",
+    "next-international": "^1.1.3",
     "openai-edge": "^1.2.2",
     "pg": "^8.11.3",
     "postcss": "^8.4.31",
