--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
     ],
     "react/jsx-curly-brace-presence": "off",
     "react/jsx-props-no-spreading": "off",
-    "react/button-has-type": "off"
+    "react/button-has-type": "off",
+    "react/require-default-props": "off"
   }
 }
