--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "sharp": "^0.32.6",
+    "slugify": "^1.6.6",
     "tailwindcss": "3.3.3",
     "zod": "^3.22.4"
   },
