--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,6 @@
     "*.css": "tailwindcss"
   },
   "editor.codeActionsOnSave": {
-    "source.organizeImports": true
+    "source.organizeImports": "explicit"
   }
 }
