--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.3",
+    "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
