--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "seed": "ts-node --transpile-only './src/app/(server)/_db/scripts/seed.ts'",
     "prepare": "husky install",
     "commit": "commit",
-    "commitlint": "commitlint --edit"
+    "commitlint": "commitlint --edit",
+    "release": "release-it"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
@@ -72,6 +73,7 @@
     "prettier": "^3.0.3",
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.4",
+    "release-it": "^17.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
