--- a/.release-it.json
+++ b/.release-it.json
@@ -1,11 +1,8 @@
 {
-  "plugins": {
-    "@release-it/conventional-changelog": {
-      "preset": "angular",
-      "infile": "CHANGELOG.md"
-    }
-  },
   "git": {
     "commitMessage": "chore: release v${version}"
+  },
+  "github": {
+    "release": true
   }
 }
